--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -679,11 +679,147 @@ StatementView.statementSummary={0} transações. Gastos Totais: {1}. Totais recebi
 
 #---------------------------------------------------------------------------------------------------------------------------------
 # Added or modified since last translation
-CustomFilterPanel.nature=Tipo
-CustomFilterPanel.expenses.toolTip=Marque esta caixa para selecionar as despesas
-CustomFilterPanel.receipts.toolTip=Marque esta caixa para selecionar as recibos
-CustomFilterPanel.error.checkStatus=Por favor verifique, pelo menos, um dos "{0}" e "{1}" caixas 
-CustomFilterPanel.error.natureStatus=Por favor verifique, pelo menos, um dos "{0}" e "{1}" caixas
 
+#-------- custom filter part --------
+#See CustomFilter.png
+CustomFilterPanel.nature=Tipo
+CustomFilterPanel.expenses.toolTip=Selecione aqui para gastos
+CustomFilterPanel.receipts.toolTip=Selecione aqui para recibos
+CustomFilterPanel.error.checkStatus=Por favor selecione pelo menos um dos "{0}" e "{1}" caixas
+CustomFilterPanel.error.natureStatus=Por favor selecione pelo menos um dos "{0}" e "{1}" caixas
+#-------- end of custom filter part --------
+
+#-------- menu "help" part --------
 MainMenu.help=Ajuda
-MainMenu.help.tooltip=Abre a página de ajuda para Yapbam
+MainMenu.help.tooltip=Abri página de ajuda para o Yapbam
+#-------- end of "help" part --------
+
+#-------- Error Reporting part --------
+#This version allows error reports to be send when an exception occurs in Yapbam
+#It introduces a dialog and a new panel in the preferences dialog
+
+#Dialog (See ReportError.png)
+ErrorManager.sendReport.message=<html><h1>Desculpe, um erro ocorreu.</h1>Gostaria de enviar um erro report para o nosso grupo ?<br>Ficaríamos agradecidos e ajudaria improvisar este aplicativo.
+ErrorManager.report.dontSend.tootip=Fecha a caixa de diálogo sem enviar o erro report
+ErrorManager.report.send.tootip=Fecha a caixa de diálogo e enviar o erro report
+
+GenericCheckBox.rememberDecision=Lembra minha decisão
+GenericCheckBox.rememberDecision.tooltip=<html>Selecione aqui se você deseja que o Yapbam lembre sua decisão e não pergunte de novo.<br>Você pode modificar sua decisão usando a caixa de diálogo Preferências.</html>
+
+#Preference panel
+ErrorManager.preferences.title=Erro Report
+ErrorManager.preferences.tooltip=A pártir desta aba, você pode configurar a maneira de enviar os erros report quando o Yapbam encontrar erros.
+ErrorManager.preferences.introduction=<html>Você pode ajudar-nos na qualidade deste aplicativo!<br>Por favor deixe o Yapbam enviar erros report quando um erro ocorrer.</html> 
+ErrorManager.preferences.sendWithoutAsking=Enviar report sem perguntar
+ErrorManager.preferences.sendWithoutAsking.tooltip=Selecione esta opção para enviar reports sem ser perguntado.
+ErrorManager.preferences.neverSendNorAsking=Não envie, e pare de me perguntar!
+ErrorManager.preferences.neverSendNorAsking.tooltip=Selecione esta opção para parar de enviar reports ou perguntar de novo.
+ErrorManager.preferences.alwaysAsk=Pergunte-me sempre
+ErrorManager.preferences.alwaysAsk.tooltip=Selecione esta opção para o Yapbam  sempre perguntar antes de enviar reports
+#-------- End of error reporting part --------
+
+#-------- update part --------
+#There are some changes in the Yapbam update process.
+#In previous versions, the user had to download and install manually new version ... which was not very comfortable
+#In this new version, Yapbam will download and install updates by itself.
+#This changes results in some changes in the "check for update" dialog and preference panel.
+
+#Changes to the preference panel
+PreferencesDialog.AutoUpdate.ifAvailable.title=Quando atualizações estiverem disponíveis
+PreferencesDialog.AutoUpdate.ifAvailable.askMe=Pergunte-me
+PreferencesDialog.AutoUpdate.ifAvailable.autoInstall=Baixar e instalar
+
+#This dialog will be displayed when Yapbam need to inform the user that a new version is available
+#There was already a dialog like this one for telling that an update was available, here are the changes to the wordings used in the dialog
+MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Sua versão: <B>{0}</B><BR>última versão: <B>{1}</B><BR><BR>O que você quer fazer ?</BODY></HTML>
+MainMenu.CheckUpdate.installNow=Instale agora
+MainMenu.CheckUpdate.cancel=Não faça nada
+
+#This dialog is displayed when the user choose to download and install the new version
+Update.Downloading.title=Baixando...
+Update.Downloading.message=Versão {0} esta sendo baixada.
+
+#This message is displayed at the end of the manual update, when the downloading is finished
+Update.Downloaded.title=Nova versão baixada
+Update.Downloaded.message=<html>Versão {0} foi baixada.<br>Esta atualização vai ser instalada quando você fechar o Yapbam.</html>
+Update.Downloaded.quitNow=Sair agora
+
+#This message is displayed if the download fails
+#In this dialog, there is the standard cancel button and a retry button
+Update.DownloadFailed.title=Baixar falhou
+Update.DownloadFailed.message=Desculpe, um erro ocorreu quando estava baixando a atualização do Yapbam.
+Update.DownloadFailed.retry=Tentar de novo
+
+#The update process is divided in two parts.
+#First, the updated files are downloaded.
+#Second, at next startup, Yapbam installs the updated files.
+#This message is displayed during the second part of the update process.
+Update.Install.title=Instalando ...
+Update.Install.message=Por favor espere, Yapbam está instalando a atualização.
+Update.Install.failure=<html>Desculpe, um erro inesperado aconteceu.<br>A cópia do seu Yapbam pode estar danificada.<br>Nós recomendamos que você baixe e re-instale o Yapbam do nosso site official : http://www.yapbam.net</html>
+Update.Install.success=Yapbam foi atualizado com sucesso
+#-------- end of the update part --------
+
+#-------- Welcome screen part --------
+#Yapbam has now a welcome screen that displays some shortcuts and tips
+#Menu that allow to re-open the welcome screen during Yapbam session
+Welcome.menuTitle=Tela de bem vindo
+Welcome.MenuToolTip=<html>Abre a tela do Yapbam de bem vindo.<br>Este diálogo fornece atalhos úteis e alguns tips.</html>
+
+#The welcome screen itself
+Welcome.introduction=<html>Bem vindo ao <b>Yapbam</b></html>
+Welcome.showAtStartup=Mostra no startup
+Welcome.showAtStartup.tooltip=Selecione aqui para esta diálogo em todo Yapbam startup
+
+#Title of the shortcuts panel
+Welcome.shorcuts.title=Atalhos úteis
+Welcome.sampleData=Ver amostra dos dados de um arquivo
+Welcome.sampleData.tooltip=Abre uma amostra de um arquivo com dados
+Welcome.sampleData.openFails=<html>Um erro ocorreru lendo a amostra de um arquivo\!<br>Talvez este arquivo ({0}) está danificado</html>
+Welcome.tutorial=<html>View the tutorial<BR>(Precisa de conexão com a Internet)</html>
+Welcome.tutorial.tooltip=Abri o site de seminário/ensino
+Welcome.faq=<html>Vista dos FAQ<BR>(Precisa de conexão com a Internet)</html>
+Welcome.faq.tooltip=Opens O site de "Questões frequentemente perguntadas(FAQ)".
+
+#Title of the tips panel
+Welcome.tip.title=Tip do dia
+#tooltips of navigation buttons 
+Welcome.firstTip.tooltip=Mostra o primeiro tip
+Welcome.previousTip.tooltip=Mostra o tip anterior
+Welcome.tipNumber.tooltip=Digite o número do Tip para vê-lo
+Welcome.nextTip.tooltip=Mostra o próximo tip
+Welcome.lastTip.tooltip=Mostra o último tip
+
+#The tips
+Tip.1=<html>A aparência do Yapbam pode ser modificada nas preferências.<hr style="width:40%">Para mudar, selecione <b>{1}</b> no <b>{0}</b> menu, e vá para a <b>{2}</b> aba.</html>
+Tip.2=<html>Você pode definir a máximo de alerta para cada conta.<hr style="width:40%">Como padrão, um alerta (ícone será mostrado no título da <b>{0}</b> aba) será informado quando o balanço for negativo.<br>Você pode modificar este valor máximo na <b>{1}</b> aba.<br>Você também pode especificar quando o balanço exceder um valor especificado.</html>
+Tip.3=<html>Suas transações periódicas podem ser gerads automaticamentes.<hr style="width:40%">Para fazer, você tem que definir <b>periodical transactions</b> nas <b>{0}</b> abas.<br>Uma maneira fácil, seria selecionando, e <b>{1}</b> no menu de context-sensitive (lado direito clicado na transação).</html>
+Tip.4=<html>Pense em clicar no lado direito!<hr style="width:40%">Clicar com o lado direito na transação lhe dá um acesso rápido a edição, duplicação ou deleção.</html>
+Tip.5=<html>A <b>{0}</b> aba permite-lhe fazer muitas mudanças:<hr style="width:40%">- Digitar, criar, suprimir transações periódicas.<br>- Renomear contas, iniciar balanços iniciais, alerta de thresholds, modo de pagamentos. Manusear cheques<br>- Renomear categorias<br>- etc.</li></ul></html>
+Tip.6=<html>Você pode fazer suas "entradas" mais rápidas com os atalhos to teclado.<hr style="width:40%">Quando você digitar uma data, a <b>flecha pra cima</b> aumenta a data por um dia, e<b>flecha pra baixo</b> diminui a data por um dia.<br>Semelhante, para os números de entradas (por exemplo, o número de checks no checkbook), estas flechas aumentam ou diminuem o número por um.</html>
+#-------- end of the welcome screen part --------
+
+#-------- Changes in the budget view --------
+#Adds some optional columns and lines to the budget view
+#See budget.png (sums and averages are null, because this functionality is not yet developped).
+BudgetPanel.averageColumn.checkBox=Coluna da média
+BudgetPanel.averageColumn.checkBox.tooltip=Selecione esta caixa para adicionar a média das coluna na tabela. 
+BudgetPanel.sumColumn.checkBox=Total da coluna
+BudgetPanel.sumColumn.checkBox.tooltip=Selecione esta caixa para adicionar o total de colunas na tabela.
+BudgetPanel.sumLine.checkBox=Total de linhas
+BudgetPanel.sumLine.checkBox.tooltip=Selecione esta caixa para adicionar o total de linhas na tabela.
+BudgetPanel.sum=TOTAL
+BudgetPanel.average=MÉDIA
+#-------- End of changes in the budget view --------
+
+#-------- Changes in save dialog --------
+saveDialog.dangerousLocation.message=<html><b>Advertência !</b><br>Você está pronto para salvar os dados da sua conta no diretório de instalação do Yapbam.<br><br><b>Seus dados provavelmente serão apagados</b> durante a próxima atualização do Yapbam.<br>Nós recomendamos que você salve seus dados em outro local.<br><br>Se você quiser arriscar, você pode continuar no seu próprio risco.</html>
+#-------- End of changes in save dialog --------
+
+#-------- Fixes to statement view --------
+#These wordings were not localized in the "statement" tab
+#The title of the receipt column
+StatementView.receipt=Recibo
+#The title of the debt coluna
+StatementView.debt=Dívida
+#-------- End of fixes to statement view --------
