--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -136,6 +136,9 @@ MainMenu.QuestionMark=?
 MainMenu.QuestionMark.Mnemonic=?
 MainMenu.QuestionMark.ToolTip=Ce menu permet de trouver de l'aide
 
+MainMenu.help=Aide
+MainMenu.help.tooltip=Ouvre l'aide de Yapbam
+
 MainMenu.About=A propos ...
 MainMenu.About.Mnemonic=A
 MainMenu.About.ToolTip=Affiche les informations sur ce programme
@@ -340,6 +343,10 @@ PreferencesDialog.Localization.language=Langue
 PreferencesDialog.Localization.revert=Annuler les modifications
 PreferencesDialog.Localization.revert.toolTip=Annuler les modifications et revenir aux réglages précédents
 
+PreferencesDialog.AutoUpdate.toolTip=Cet onglet permet de configurer la recherche des mises à jour
+PreferencesDialog.AutoUpdate.ifAvailable.title=Quand une mise à jour est disponible
+PreferencesDialog.AutoUpdate.ifAvailable.askMe=Me demander
+PreferencesDialog.AutoUpdate.ifAvailable.autoInstall=La télécharger et l'installer
 PreferencesDialog.AutoUpdate.atStartup=Vérifier au démarrage
 PreferencesDialog.AutoUpdate.atStartup.toolTip=Sélectionnez ce choix pour que Yapbam vérifie automatiquement la disponibilité de mises à jour
 PreferencesDialog.AutoUpdate.days.toolTip=Entrez le nombre de jours entre deux vérifications (0 pour vérifier à chaque démarrage)
@@ -351,7 +358,6 @@ PreferencesDialog.AutoUpdate.interval.part2=jours
 PreferencesDialog.AutoUpdate.manually=Vérifier manuellement
 PreferencesDialog.AutoUpdate.manually.toolTip=Sélectionnez ce choix pour que Yapbam vous laisse vérifier manuellement la disponibilité des mises à jour)
 PreferencesDialog.AutoUpdate.title=Mises à jour
-PreferencesDialog.AutoUpdate.toolTip=Cet onglet permet de configurer la recherche des mises à jour
 
 PreferencesDialog.LookAndFeel.title=Apparence
 PreferencesDialog.LookAndFeel.toolTip=Cet onglet permet de configurer l'apparence de Yapbam
@@ -537,6 +543,12 @@ CustomFilterPanel.clearAll=Effacer tous les filtres
 CustomFilterPanel.clearAll.toolTip=Cliquez ici pour effacer tous les filtres
 CustomFilterPanel.regexprHelp.toolTip=Cliquez ici pour avoir de l'aide sur les expressions régulières
 
+CustomFilterPanel.nature=Nature
+CustomFilterPanel.expenses.toolTip=Cochez cette case pour sélectionner les dépenses
+CustomFilterPanel.receipts.toolTip=Cochez cette case pour sélectionner les recettes
+CustomFilterPanel.error.checkStatus=Au moins l''une des cases "{0}" et "{1}" doit être cochée
+CustomFilterPanel.error.natureStatus=Au moins l''une des cases "{0}" et "{1}" doit être cochée 
+
 CustomFilterPanel.error.amountMimimum=Le montant minimum est incorrect
 CustomFilterPanel.error.amountMaximum=Le montant maximum est incorrect
 CustomFilterPanel.error.amountFromHigherThanTo=Le montant minimum doit être inférieur au montant maxi
@@ -560,6 +572,14 @@ BudgetPanel.perMonth=Vue par mois
 BudgetPanel.perMonth.tooltip=Cliquez ici pour obtenir la ventilation par mois
 BudgetPanel.perYear=Vue par an
 BudgetPanel.perYear.tooltip=Cliquez ici pour obtenir la ventilation par année
+BudgetPanel.averageColumn.checkBox=Colonne de moyennes
+BudgetPanel.averageColumn.checkBox.tooltip=Cochez cette case pour ajouter au tableau une colonne contenant les moyennes par catégories.
+BudgetPanel.sumColumn.checkBox=Colonnes de totaux
+BudgetPanel.sumColumn.checkBox.tooltip=Cochez cette case pour ajouter au tableau une colonne contenant les totaux par catégories.
+BudgetPanel.sumLine.checkBox=Ligne de totaux
+BudgetPanel.sumLine.checkBox.tooltip=Cochez cette case pour ajouter au tableau une ligne contenant les totaux par date.
+BudgetPanel.sum=TOTAL
+BudgetPanel.average=MOYENNE
 
 ErrorManager.message=Une erreur est survenue \!\n L'opération en cours est abandonnée.
 ErrorManager.title=Erreur \!\!\!
@@ -672,22 +692,6 @@ StatementView.startBalance=<html>Solde en début de période : <b>{0}</b></html>
 StatementView.endBalance=<html>Solde en fin de période : <b>{0}</b></html>
 StatementView.statementSummary={0} opérations. Total des dépenses : {1}. Total des recettes : {2}
 
-#---------------------------------------------------------------------------------------------------------------------------------
-# Added or modified since last translation
-
-#-------- custom filter part --------
-CustomFilterPanel.nature=Nature
-CustomFilterPanel.expenses.toolTip=Cochez cette case pour sélectionner les dépenses
-CustomFilterPanel.receipts.toolTip=Cochez cette case pour sélectionner les recettes
-CustomFilterPanel.error.checkStatus=Au moins l''une des cases "{0}" et "{1}" doit être cochée
-CustomFilterPanel.error.natureStatus=Au moins l''une des cases "{0}" et "{1}" doit être cochée 
-#-------- end of custom filter part --------
-
-#-------- menu "help" part --------
-MainMenu.help=Aide
-MainMenu.help.tooltip=Ouvre l'aide de Yapbam
-#-------- end of "help" part --------
-
 #-------- Error Reporting part --------
 ErrorManager.sendReport.message=<html><h1>Désolé, une erreur est survenue.</h1>Un rapport d'erreur est prêt à être envoyer à l'équipe de Yapbam.<br>Accepteriez vous son envoi ?<br>Cela nous aiderait beaucoup à améliorer la qualité de ce logiciel.
 ErrorManager.report.dontSend.tootip=Cliquez sur ce bouton pour ne pas envoyer le rapport d'erreur
@@ -707,11 +711,7 @@ ErrorManager.preferences.alwaysAsk=Me demander
 ErrorManager.preferences.alwaysAsk.tooltip=Choisissez cette option pour que Yapbam vous demande systématiquement avant d'envoyer un rapport d'erreur.
 #-------- End of error reporting part --------
 
-#-------- update part --------
-PreferencesDialog.AutoUpdate.ifAvailable.title=Quand une mise à jour est disponible
-PreferencesDialog.AutoUpdate.ifAvailable.askMe=Me demander
-PreferencesDialog.AutoUpdate.ifAvailable.autoInstall=La télécharger et l'installer
-
+#-------- update process part --------
 #This dialog will be displayed when Yapbam need to inform the user that a new version is available
 MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Votre version: <B>{0}</B><BR>Version à jour: <B>{1}</B><BR><BR>Que souhaitez vous faire ?</BODY></HTML>
 MainMenu.CheckUpdate.installNow=L'installer maintenant
@@ -744,7 +744,7 @@ Update.Install.title=Installation ...
 Update.Install.message=Merci de patienter, Yapbam installe une mise à jour.
 Update.Install.failure=<html>Désolé, une erreur inattendue est survenue.<br>Votre copie de Yapbam est probablement corrompue.<br>Nous vous recommandons de réinstaller Yapbam a partir de sa distribution officielle disponible ici : http://www.yapbam.net</html>
 Update.Install.success=Yapbam a été mis à jour
-#-------- end of the update part --------
+#-------- End of update process part --------
 
 #-------- Welcome screen part --------
 Welcome.menuTitle=Ecran d'accueil
@@ -777,23 +777,8 @@ Tip.5=<html>L''onglet <b>{0}</b> permet d''effectuer de nombreuses modifications
 Tip.6=<html>Vous pouvez accélérez vos saisies grâce aux raccourcis clavier.<hr style="width:40%">Lorsque vous éditez une date, la <b>flèche haute</b> passe au lendemain, la <b>flèche basse</b> passe à la veille.<br>De même, pour les saisies de nombres (par exemple, le nombre de chèques dans un chéquier), ces flèches augmentent ou diminuent d'une unité.</html>
 #-------- end of the welcome screen part --------
 
-#-------- Changes in the budget view --------
-#Adds some optional columns and lines to the budget view
-#See budget.png (sum are averages are null, because this functionnality is not yet developped).
-BudgetPanel.averageColumn.checkBox=Colonne de moyennes
-BudgetPanel.averageColumn.checkBox.tooltip=Cochez cette case pour ajouter au tableau une colonne contenant les moyennes par catégories.
-BudgetPanel.sumColumn.checkBox=Colonnes de totaux
-BudgetPanel.sumColumn.checkBox.tooltip=Cochez cette case pour ajouter au tableau une colonne contenant les totaux par catégories.
-BudgetPanel.sumLine.checkBox=Ligne de totaux
-BudgetPanel.sumLine.checkBox.tooltip=Cochez cette case pour ajouter au tableau une ligne contenant les totaux par date.
-BudgetPanel.sum=TOTAL
-BudgetPanel.average=MOYENNE
-#-------- End of changes in the budget view --------
-
-
-#==================================================================================================================================================
-#Not yet sent to Sharada
-#==================================================================================================================================================
+#---------------------------------------------------------------------------------------------------------------------------------
+# Added or modified since last translation
 
 #-------- Changes in the welcome screen --------
 Welcome.sampleData.openFails=<html>Une erreur est survenue durant la lecture du fichier d'exemple \!<br>Ce fichier ({0}) est probablement corrompu</html>
