--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -802,3 +802,11 @@ Tip.6=<html>Você pode fazer suas "entradas" mais rápidas com os atalhos to tecla
 #---------------------------------------------------------------------------------------------------------------------------------
 # Added or modified since last translation
 
+#-------- AccountsSummaryView --------
+AccountsSummary.title=Accounts summary
+AccountsSummary.tooltip=Summary of all accounts
+AccountsSummary.CheckedBalance=Balan\u00e7o verificado
+AccountsSummary.CurrentBalance=Balan\u00e7o atual
+AccountsSummary.FinalBalance=Balan\u00e7o final
+#-------- End of AccountsSummaryView --------
+
