--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -796,3 +796,12 @@ StatementView.receipt=Crédit
 StatementView.debt=Débit
 #-------- End of fixes to statement view --------
 
+#-------- AccountsSummaryView --------
+AccountsSummary.title=Bilan des comptes
+AccountsSummary.tooltip=Résumé du bilan de l'ensemble des comptes
+AccountsSummary.CheckedBalance=Solde pointé
+AccountsSummary.CurrentBalance=Solde courant
+AccountsSummary.FinalBalance=Solde final
+#-------- End of AccountsSummaryView --------
+
+
