--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -166,7 +166,7 @@ MainMenu.web.yapbam=Visiter le site web de Yapbam
 MainMenu.web.yapbam.tooltip=Ouvre le site web de Yapbam (requiert une connexion Internet)
 
 BalanceHistory.title=Historique du solde
-BalanceHistory.toolTip=Graphique de l'évolution du solde au jour le jour
+BalanceHistory.graph.toolTip=Graphique de l'évolution du solde au jour le jour
 BalanceHistory.balance=Solde au {0} : {1}
 BalanceHistory.chart.toolTip=Déplacez la barre verticale pour afficher le solde du jour correspondant ci-dessous
 BalanceHistory.showGrid=Afficher la grille
@@ -796,7 +796,7 @@ StatementView.receipt=Crédit
 StatementView.debt=Débit
 #-------- End of fixes to statement view --------
 
-#-------- AccountsSummaryView --------
+#-------- AccountsSummary view --------
 AccountsSummary.title=Bilan des comptes
 AccountsSummary.tooltip=Résumé du bilan de l'ensemble des comptes
 AccountsSummary.CheckedBalance=Solde pointé
@@ -804,4 +804,10 @@ AccountsSummary.CurrentBalance=Solde courant
 AccountsSummary.FinalBalance=Solde final
 #-------- End of AccountsSummaryView --------
 
+#-------- Balance History view --------
+#Introducing a new sub-panel in the balance history panel
+BalanceHistory.toolTip=Evolution du solde au jour le jour
+BalanceHistory.graph.title=Graphique
+BalanceHistory.transaction.title=Opérations
+BalanceHistory.transaction.tooltip=Opérations et solde au jour le jour
 
