--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -167,7 +167,7 @@ MainMenu.web.yapbam=Visit Yapbam site
 MainMenu.web.yapbam.tooltip=Abri Yapbam site (necessita de conexão com a Internet)
 
 BalanceHistory.title=Hist\u00F3ria do Balan\u00E7o
-BalanceHistory.toolTip=Gr\u00E1fico do balan\u00E7o do dia
+BalanceHistory.graph.toolTip=Gr\u00E1fico do balan\u00E7o do dia
 BalanceHistory.balance=Balan\u00E7o do {0} : {1}
 BalanceHistory.chart.toolTip=Move a barra vertical para mostrar abaixo o balan\u00E7o de outro dia
 BalanceHistory.showGrid=Inserir a grade 
@@ -802,11 +802,18 @@ Tip.6=<html>Você pode fazer suas "entradas" mais rápidas com os atalhos to tecla
 #---------------------------------------------------------------------------------------------------------------------------------
 # Added or modified since last translation
 
-#-------- AccountsSummaryView --------
+#-------- AccountsSummary View --------
 AccountsSummary.title=Accounts summary
 AccountsSummary.tooltip=Summary of all accounts
 AccountsSummary.CheckedBalance=Balan\u00e7o verificado
 AccountsSummary.CurrentBalance=Balan\u00e7o atual
 AccountsSummary.FinalBalance=Balan\u00e7o final
 #-------- End of AccountsSummaryView --------
+
+#-------- Balance History view --------
+#Introducing a new sub-panel in the balance history panel
+BalanceHistory.toolTip=Day-to-day balance
+BalanceHistory.graph.title=Chart
+BalanceHistory.transaction.title=Transactions
+BalanceHistory.transaction.tooltip=day-to-day transactions and balance
 
