--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -810,4 +810,5 @@ BalanceHistory.toolTip=Evolution du solde au jour le jour
 BalanceHistory.graph.title=Graphique
 BalanceHistory.transaction.title=Opérations
 BalanceHistory.transaction.tooltip=Opérations et solde au jour le jour
+BalanceHistory.transaction.remainingBalance=Solde restant
 
