--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -180,7 +180,7 @@ BalanceHistory.alertTooltipAdd=Primeiro alerta no {0}
 BalanceHistory.alerts.format={0}: {1,date,short} ({2})
 BalanceHistory.alerts.toolTip=Selecione um alerta neste menu para ver o histórico do balanço da conta correspondente (muda o filtro atual)
 
-AboutDialog.Content=<html>Direitos de cópia &copy; 2009 <b>{0}</b> - Todos os direitos reservado<br>Vers\u00E3o: <b>{1}</b></html>
+AboutDialog.Content=<html>Direitos de cópia &copy; 2009-2011 <b>{0}</b> - Todos os direitos reservado<br>Vers\u00E3o: <b>{1}</b></html>
 AboutDialog.License.TabName=Licen\u00E7a
 AboutDialog.RelNotes.TabName=Notas distribu\u00EDdas
 AboutDialog.Contributors.TabName=Contribuintes
@@ -818,3 +818,7 @@ BalanceHistory.transaction.title=Transactions
 BalanceHistory.transaction.tooltip=day-to-day transactions and balance
 BalanceHistory.transaction.remainingBalance=Remaining balance
 
+#-------- New "important news" screen -------
+ImportantNews.title=Important news
+ImportantNews.intro=The latest Yapbam update has resulted in significant changes below
+ImportantNews.0.8.2=The <b>{0}</b> has been moved from <b>{1}</b> tab to <b>{2}</b> tab.<br><br> The purpose of this change is to avoid checking errors. Indeed, in the view <b>{1}</b>, it was possible to check by mistake, a transaction already checked, or belonging to the wrong account.<br>The <b>{0}</b> is now only available in the view <b>{2}</b> when <b>{3}</b> menu item is selected, which makes these errors impossible.
