--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -178,7 +178,7 @@ BalanceHistory.alerts=Alertes :
 BalanceHistory.alerts.format={0}: {1,date,short} ({2})
 BalanceHistory.alerts.toolTip=Sélectionnez une alerte dans ce menu pour visualiser l'historique du solde du compte qu'elle concerne (Ceci changera le filtre)
 
-AboutDialog.Content=<html>Copyright &copy; 2009 <b>{0}</b> - Tous droits réservés<br>Version : <b>{1}</b></html>
+AboutDialog.Content=<html>Copyright &copy; 2009-2011 <b>{0}</b> - Tous droits réservés<br>Version : <b>{1}</b></html>
 AboutDialog.License.TabName=License
 AboutDialog.RelNotes.TabName=Notes de mise à jour
 AboutDialog.Contributors.TabName=Contributeurs
@@ -812,3 +812,7 @@ BalanceHistory.transaction.title=Opérations
 BalanceHistory.transaction.tooltip=Opérations et solde au jour le jour
 BalanceHistory.transaction.remainingBalance=Solde restant
 
+#-------- New "important news" screen -------
+ImportantNews.title=Nouvelles importantes
+ImportantNews.intro=La dernière mise à jour de Yapbam a entrainé les modifications importantes ci-dessous
+ImportantNews.0.8.2=Le <b>{0}</b> a été déplacé de l''onglet <b>{1}</b> vers l''onglet <b>{2}</b><br><br>Le but de ce changement est d''éviter les erreurs de pointage. En effet, dans la vue <b>{1}</b>, il était possible de pointer, par erreur, une opération déjà pointée, ou n''appartenant pas au bon compte.<br> Le <b>{0}</b> est maintenant uniquement disponible dans la vue <b>{2}</b> lorsque le menu <b>{3}</b> est sélectionné, ce qui rend impossible ces erreurs.
