--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -816,3 +816,23 @@ BalanceHistory.transaction.remainingBalance=Solde restant
 ImportantNews.title=Nouvelles importantes
 ImportantNews.intro=La dernière mise à jour de Yapbam a entrainé les modifications importantes ci-dessous
 ImportantNews.0.8.2=Le <b>{0}</b> a été déplacé de l''onglet <b>{1}</b> vers l''onglet <b>{2}</b><br><br>Le but de ce changement est d''éviter les erreurs de pointage. En effet, dans la vue <b>{1}</b>, il était possible de pointer, par erreur, une opération déjà pointée, ou n''appartenant pas au bon compte.<br> Le <b>{0}</b> est maintenant uniquement disponible dans la vue <b>{2}</b> lorsque le menu <b>{3}</b> est sélectionné, ce qui rend impossible ces erreurs.
+
+#-------- New preference panel on transaction editing -------
+TransactionEditingPreferencesPanel.title=Edition des opérations
+TransactionEditingPreferencesPanel.tooltip=Cet onglet vous permet de configurer le comportement de l'édition des opérations
+TransactionEditingPreferencesPanel.alertIfChangeChecked=Alertez moi si je modifie une opération pointée
+TransactionEditingPreferencesPanel.alertIfChangeChecked.tooltip=Cochez cette case pour être alerté si vous modifiez le montant, le numéro et le relevé d'une opération pointée
+TransactionEditingPreferencesPanel.alertIfDelete=Demandez moi confirmation avant de supprimer une opération
+TransactionEditingPreferencesPanel.alertIfDelete.tooltip=Cochez cette case pour qu'une demande de confirmation vous soit adressée avant suppression d'une opération
+TransactionEditingPreferencesPanel.autoFillStatementId=Remplir automatiquement l'identifiant du relevé
+TransactionEditingPreferencesPanel.autoFillStatementId.tooltip=Cochez cette case pour que le champ relevé soit automatiquement rempli lors de l'édition d'une opération
+TransactionEditingPreferencesPanel.statementBasedOnDate=Basé sur la date
+TransactionEditingPreferencesPanel.statementBasedOnDate.tooltip=Sélectionnez cette option pour remplir le champ relevé sur la base de la date de l'opération
+TransactionEditingPreferencesPanel.statementBasedOnValueDate=Basé la date de valeur
+TransactionEditingPreferencesPanel.statementBasedOnValueDate.tooltip=Sélectionnez cette option pour remplir le champ relevé sur la base de la date de valeur de l'opération
+TransactionEditingPreferencesPanel.format.title=Format
+TransactionEditingPreferencesPanel.format.long=Long (exemple : {0})
+TransactionEditingPreferencesPanel.format.long.tooltip=Sélectionnez cette option pour avoir des identifiants de relevés de compte longs 
+TransactionEditingPreferencesPanel.format.short=Court (exemple : {0})
+TransactionEditingPreferencesPanel.format.short.tooltip=Sélectionnez cette option pour avoir des identifiants de relevés de compte longs
+
