--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -820,8 +820,8 @@ ImportantNews.0.8.2=Le <b>{0}</b> a été déplacé de l''onglet <b>{1}</b> vers l''
 #-------- New preference panel on transaction editing -------
 TransactionEditingPreferencesPanel.title=Edition des opérations
 TransactionEditingPreferencesPanel.tooltip=Cet onglet vous permet de configurer le comportement de l'édition des opérations
-TransactionEditingPreferencesPanel.alertIfChangeChecked=Alertez moi si je modifie une opération pointée
-TransactionEditingPreferencesPanel.alertIfChangeChecked.tooltip=Cochez cette case pour être alerté si vous modifiez le montant, le numéro et le relevé d'une opération pointée
+TransactionEditingPreferencesPanel.alertIfChangeChecked=Alertez moi si je modifie ou supprime une opération pointée
+TransactionEditingPreferencesPanel.alertIfChangeChecked.tooltip=Cochez cette case pour être alerté si vous modifiez le montant, le numéro et le relevé d'une opération pointée ou si vous la supprimez
 TransactionEditingPreferencesPanel.alertIfDelete=Demandez moi confirmation avant de supprimer une opération
 TransactionEditingPreferencesPanel.alertIfDelete.tooltip=Cochez cette case pour qu'une demande de confirmation vous soit adressée avant suppression d'une opération
 TransactionEditingPreferencesPanel.autoFillStatementId=Remplir automatiquement l'identifiant du relevé
@@ -836,3 +836,11 @@ TransactionEditingPreferencesPanel.format.long.tooltip=Sélectionnez cette option
 TransactionEditingPreferencesPanel.format.short=Court (exemple : {0})
 TransactionEditingPreferencesPanel.format.short.tooltip=Sélectionnez cette option pour avoir des identifiants de relevés de compte longs
 
+ModifyCheckedTransactionAlert.title=Modification d'une opération pointée
+ModifyCheckedTransactionAlert.message=Vous êtes sur le point de modifier une opération déjà pointée.
+DeleteCheckedTransactionAlert.title=Suppression d'une opération pointée
+DeleteCheckedTransactionAlert.message=Vous êtes sur le point de supprimer une opération déjà pointée.
+DeleteTransactionAlert.title=Suppression d'une opération
+DeleteTransactionAlert.message=Vous êtes sur le point de supprimer une opération.
+
+GenericButton.dontAskMeAnyMore=Ne plus me demander
