--- a/Yapbam/src/net/yapbam/gui/tools/currencyNames_pt.properties
+++ b/Yapbam/src/net/yapbam/gui/tools/currencyNames_pt.properties
@@ -13,6 +13,7 @@ HKD=D\u00F3lar de Hong Kong
 HRK=Kuna
 HUF=Florim
 IDR=Rupia Indon\u00E9sia
+ILS=Shekel
 INR=Rupia Indiana
 ISK=Krona Islandesa
 JPY=Iene
