--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -817,7 +817,7 @@ ImportantNews.title=Nouvelles importantes
 ImportantNews.intro=La dernière mise à jour de Yapbam a entrainé les modifications importantes ci-dessous
 ImportantNews.0.8.2=Le <b>{0}</b> a été déplacé de l''onglet <b>{1}</b> vers l''onglet <b>{2}</b><br><br>Le but de ce changement est d''éviter les erreurs de pointage. En effet, dans la vue <b>{1}</b>, il était possible de pointer, par erreur, une opération déjà pointée, ou n''appartenant pas au bon compte.<br> Le <b>{0}</b> est maintenant uniquement disponible dans la vue <b>{2}</b> lorsque le menu <b>{3}</b> est sélectionné, ce qui rend impossible ces erreurs.
 
-#-------- New preference panel on transaction editing -------
+#-------- New preference panel about transaction editing -------
 TransactionEditingPreferencesPanel.title=Edition des opérations
 TransactionEditingPreferencesPanel.tooltip=Cet onglet vous permet de configurer le comportement de l'édition des opérations
 TransactionEditingPreferencesPanel.alertIfChangeChecked=Alertez moi si je modifie ou supprime une opération pointée
@@ -844,3 +844,7 @@ DeleteTransactionAlert.title=Suppression d'une opération
 DeleteTransactionAlert.message=Vous êtes sur le point de supprimer une opération.
 
 GenericButton.dontAskMeAnyMore=Ne plus me demander
+
+#-------- New preference sub-panel about general graphic theme -------
+PreferencesDialog.Theme.title=Thème
+PreferencesDialog.Theme.toolTip=Cet onglet permet de choisir le thème visuel de l'interface
