--- a/src/net/yapbam/gui/tools/currencyNames_fr.properties
+++ b/src/net/yapbam/gui/tools/currencyNames_fr.properties
@@ -13,6 +13,7 @@ HKD=Dollar de Hong Kong
 HRK=Kuna croate
 HUF=Forint hongrois
 IDR=Roupie indonésienne
+ILS=Nouveau shekel
 INR=Roupie indienne
 ISK=Couronne islandaise
 JPY=Yen japonais
