--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -836,6 +836,7 @@ TransactionEditingPreferencesPanel.format.long.tooltip=Sélectionnez cette option
 TransactionEditingPreferencesPanel.format.short=Court (exemple : {0})
 TransactionEditingPreferencesPanel.format.short.tooltip=Sélectionnez cette option pour avoir des identifiants de relevés de compte longs
 
+#Alert dialogs
 ModifyCheckedTransactionAlert.title=Modification d'une opération pointée
 ModifyCheckedTransactionAlert.message=Vous êtes sur le point de modifier une opération déjà pointée.
 DeleteCheckedTransactionAlert.title=Suppression d'une opération pointée
@@ -843,6 +844,7 @@ DeleteCheckedTransactionAlert.message=Vous êtes sur le point de supprimer une op
 DeleteTransactionAlert.title=Suppression d'une opération
 DeleteTransactionAlert.message=Vous êtes sur le point de supprimer une opération.
 
+#A generic button in the alert dialog to desactivate the alert
 GenericButton.dontAskMeAnyMore=Ne plus me demander
 
 #-------- New preference sub-panel about general graphic theme -------
