--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -842,6 +842,7 @@ TransactionEditingPreferencesPanel.format.long.tooltip=Select this button to hav
 TransactionEditingPreferencesPanel.format.short=Short Style (example : {0})
 TransactionEditingPreferencesPanel.format.short.tooltip=Select this button to have short statement id
 
+#Alert dialogs
 ModifyCheckedTransactionAlert.title=Checked transaction change
 ModifyCheckedTransactionAlert.message=You are about to change a checked transaction.
 DeleteCheckedTransactionAlert.title=Checked transaction deletion
@@ -849,6 +850,7 @@ DeleteCheckedTransactionAlert.message=You are about to delete a checked transact
 DeleteTransactionAlert.title=Transaction deletion
 DeleteTransactionAlert.message=You are about to delete a transaction.
 
+#A generic button in the alert dialog to desactivate the alert
 GenericButton.dontAskMeAnyMore=Don't ask me anymore
 
 #-------- New preference sub-panel about general graphic theme -------
