--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -471,7 +471,7 @@ StatisticsPlugin.pie.byCategory.title=Dépenses par catégorie
 StatisticsPlugin.title=Statistiques
 StatisticsPlugin.tooltip=Statistiques sur vos recettes et vos dépenses
 
-HelpManager.errorDialog.message=Erreur {0} lors de l'ouverture de l'aide
+HelpManager.errorDialog.message=Erreur {0} lors de l''ouverture de l''aide
 HelpManager.errorDialog.title=Impossible d'ouvrir l'aide
 
 CustomFilterPanel.account.toolTip=Sélectionner ici les comptes autorisés
