--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -663,6 +663,7 @@ checkbookDialog.finished.DeleteAndCreateNew=Le supprimer et en créer un nouveau
 
 saveDialog.FileExist.message=Ce fichier existe déjà. Voulez-vous l'écraser ?
 saveDialog.FileExist.title=Alerte
+saveDialog.dangerousLocation.message=<html><b>Attention !</b><br>Vous êtes sur le point de sauver votre fichier de données dans le répertoire d'installation de Yapbam.<br><br><b>Vos données seront probablement effacées</b> lors de la prochaine mise à jour de Yapbam.<br>Nous vous recommandons vivement de sauver vos données dans un autre emplacement.<br><br>Vous pouvez cependant continuer, à vos risques et périls.</html>
 
 # Menu item to set a password to protect the data
 MainMenu.Protect=Protection par mot de passe ...
@@ -757,6 +758,7 @@ Welcome.showAtStartup.tooltip=Cochez cette case pour ouvrir cette fenêtre à chaq
 Welcome.shorcuts.title=Raccourcis utiles
 Welcome.sampleData=Ouvrir un fichier exemple
 Welcome.sampleData.tooltip=Ouvre un fichier d'exemple de données
+Welcome.sampleData.openFails=<html>Une erreur est survenue durant la lecture du fichier d'exemple \!<br>Ce fichier ({0}) est probablement corrompu</html>
 Welcome.tutorial=<html>Voir le tutoriel<BR>(Requiert une connexion Internet)</html>
 Welcome.tutorial.tooltip=Ouvre le tutoriel de Yapbam
 Welcome.faq=<html>Voir les questions fréquentes<BR>(Requiert une connexion Internet)</html>
@@ -779,14 +781,6 @@ Tip.6=<html>Vous pouvez accélérez vos saisies grâce aux raccourcis clavier.<hr s
 
 #---------------------------------------------------------------------------------------------------------------------------------
 # Added or modified since last translation
-
-#-------- Changes in the welcome screen --------
-Welcome.sampleData.openFails=<html>Une erreur est survenue durant la lecture du fichier d'exemple \!<br>Ce fichier ({0}) est probablement corrompu</html>
-#-------- End of changes in the welcome screen --------
-
-#-------- Changes in save dialog --------
-saveDialog.dangerousLocation.message=<html><b>Warning !</b><br>You are about to save your account data in the Yapbam installation directory.<br><br><b>Your data will probably be erased</b> during next Yapbam update.<br>We strongly recommend you to save your data elsewhere.<br><br>If you like danger, you can continue, at your own risk.</html>
-#-------- End of changes in save dialog --------
 
 #-------- Fixes to statement view --------
 #These wordings were not localized in the "statement" tab
